removed stratified shuffle testing

--- a/notebooks/Bosch_plp.ipynb
+++ b/notebooks/Bosch_plp.ipynb
@@ -2070,84 +2070,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "test_sss = StratifiedShuffleSplit([0,1,0,1,0,0,1,1,0,1,0], n_iter=2, train_size=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 6 5 8 2]\n",
-      "[0 7]\n",
-      "[2 0 6 7 4]\n",
-      "[9 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for train_index, test_index in test_sss:\n",
-    "    print train_index\n",
-    "    print test_index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "iter_1 = [(train, test) for train, test in test_sss]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train_index, test_index = iter_1[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 9 4 0 3]\n",
-      "[7 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print train_index\n",
-    "print test_index"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
@@ -4607,9 +4529,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4621,7 +4543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
