--- a/notebooks/Bosch_plp.ipynb
+++ b/notebooks/Bosch_plp.ipynb
@@ -368,6 +368,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Loading and Proportion Analysis\n",
     "\n",
     "The training data is loaded into memory using Pandas (~1.18 million records). Proportions convey that the positive class (i.e. failed parts) is underepresented. "
@@ -744,6 +751,13 @@
     "print \"negative proportion in train: {}%\".format((len(y_train[y_train==0]) / len(y_train))*100)\n",
     "print \"positive proportion in test: {}%\".format((len(y_test[y_test==1]) / len(y_test))*100)\n",
     "print \"negative proportion in test: {}%\".format((len(y_test[y_test==0]) / len(y_test))*100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -1423,33 +1437,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# end feature importance analysis"
+    "<br>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Training and Evaluation\n",
+    "With the newly generated feature subset, three different models were used for training and evaluation. Of the two ensemble (GradientBoost, RandomForest) and SVM (LinearSVC) estimators, the Random Forest Classifier training resulted in the highest precision (i.e. small number of false positives) of 89.2%."
+   ]
   },
   {
    "cell_type": "code",
@@ -1763,14 +1763,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# test random forest with subset of features"
+    "## Best Performing Estimator"
    ]
   },
   {
@@ -1985,14 +1983,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# under sampling technique such that the model has to deal with a lesser amount of noise"
+    "## Under-Sampling\n",
+    "A secondary test was performed with the best performing estimator, wherein the feature space was altered such that there existed a lesser proportion of the over-represented class."
    ]
   },
   {
@@ -2923,17 +2920,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<br>"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#### PREVIOUS ANALYSIS - analysis_date < '27-11-2016' ####"
+    "## Miscellaneous and Previous Analysis"
    ]
   },
   {
@@ -4342,99 +4337,8 @@
    },
    "outputs": [],
    "source": [
-    "# none of the cells above this point have been executed\n",
-    "# outside of the first two for library and dataset imports\n",
-    "# trying principal component analysis for dimensionality reduction\n",
+    "# should try principal component analysis for dimensionality reduction\n",
     "# http://sebastianraschka.com/Articles/2015_pca_in_3_steps.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# split set into data X and labels Y\n",
-    "X = df_numeric.ix[:, 1:len(df_numeric.columns)-1].values\n",
-    "y = df_numeric.ix[:,len(df_numeric.columns)-1].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# need to do missing value imputation before preprocessing\n",
-    "X = nan_transform(df_numeric).ix[:, 1:len(df_numeric.columns)-1].values\n",
-    "\n",
-    "# transform data onto unit scale mean=0, variance=1\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "X_std = StandardScaler().fit_transform(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# eigendecomposition - computing eigenvectors and eigenvalues"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# compute covariance matrix\n",
-    "# each element in the matrix represents covariance between two features\n",
-    "mean_vec = np.mean(X_std, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# this approach takes too long\n",
-    "cov_mat = (X_std - mean_vec).T.dot((X_std - mean_vec)) / (X_std.shape[0]-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# covariance matrix using numpy\n",
-    "cov_mat = np.cov(X_std.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# eigendecomposition on covariance matrix\n",
-    "eig_vals, eig_vecs = np.linalg.eig(cov_mat)"
    ]
   }
  ],
