added notebook title

--- a/notebooks/Bosch_plp.ipynb
+++ b/notebooks/Bosch_plp.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bosch Production Line Performance Project"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
